--- a/settings.gradle
+++ b/settings.gradle
@@ -15,5 +15,5 @@ dependencyResolutionManagement {
 
     }
 }
-rootProject.name = "TPQuickPlaceByKakaoSearchAPI"
+rootProject.name = "PlaceSearch"
 include ':app'
